--- a/iceberg/pom.xml
+++ b/iceberg/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-spark-runtime-3.2_2.12</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-data</artifactId>
             <version>${iceberg.version}</version>
         </dependency>
