--- a/hudi/pom.xml
+++ b/hudi/pom.xml
@@ -7,14 +7,10 @@
     <groupId>org.example</groupId>
     <artifactId>hudi</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
-
-    <dependencies>
-    </dependencies>
+    <modules>
+        <module>hudi-spark</module>
+        <module>hudi-flink</module>
+    </modules>
 </project>
