--- a/iceberg/pom.xml
+++ b/iceberg/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <parent>
+        <groupId>org.example</groupId>
+        <artifactId>DataLakeSpike</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>iceberg</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -13,4 +18,6 @@
         <module>iceberg-spark</module>
         <module>iceberg-flink</module>
     </modules>
+
+
 </project>
