--- a/iceberg/iceberg-spark/pom.xml
+++ b/iceberg/iceberg-spark/pom.xml
@@ -18,7 +18,6 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <iceberg.version>1.2.1</iceberg.version>
-        <scala.version>2.12</scala.version>
     </properties>
 
     <dependencies>
@@ -90,17 +89,17 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.12.18</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.12.18</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
-            <version>2.12.18</version>
+            <version>${scala.version}</version>
         </dependency>
     </dependencies>
 
