--- a/iceberg/iceberg-flink/pom.xml
+++ b/iceberg/iceberg-flink/pom.xml
@@ -52,6 +52,11 @@
             <version>3.3.4</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs-client</artifactId>
+            <version>3.3.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
@@ -65,6 +70,12 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
             <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-api</artifactId>
+            <version>1.2.1</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
