--- a/hudi/hudi-sdk/pom.xml
+++ b/hudi/hudi-sdk/pom.xml
@@ -6,16 +6,13 @@
 
     <parent>
         <groupId>org.example</groupId>
-        <artifactId>DataLakeSpike</artifactId>
+        <artifactId>hudi</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>hudi</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>hudi-spark</module>
-        <module>hudi-flink</module>
-        <module>hudi-sdk</module>
-    </modules>
+    <groupId>org.example</groupId>
+    <artifactId>hudi-sdk</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+
 </project>
