--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -6,12 +6,13 @@
 
     <parent>
         <groupId>org.example</groupId>
-        <artifactId>hudi</artifactId>
+        <artifactId>DataLakeSpike</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>hudi-spark</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
+    <groupId>org.example</groupId>
+    <artifactId>extension</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -27,14 +28,14 @@
             <version>${spark.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.14.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.12</artifactId>
             <version>${spark.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hudi</groupId>
-            <artifactId>hudi-spark3_2.12</artifactId>
-            <version>0.11.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -65,6 +66,11 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
             <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client-runtime</artifactId>
+            <version>3.3.4</version>
         </dependency>
     </dependencies>
 
@@ -97,5 +103,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
