--- a/hudi/hudi-sdk/pom.xml
+++ b/hudi/hudi-sdk/pom.xml
@@ -41,6 +41,12 @@
             <version>1.11.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.11.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
