--- a/hudi/hudi-sdk/pom.xml
+++ b/hudi/hudi-sdk/pom.xml
@@ -47,6 +47,16 @@
             <version>1.11.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-hadoop</artifactId>
+            <version>1.12.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-avro</artifactId>
+            <version>1.12.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
