--- a/iceberg/iceberg-sdk/pom.xml
+++ b/iceberg/iceberg-sdk/pom.xml
@@ -14,5 +14,22 @@
     <artifactId>iceberg-sdk</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>3.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-core</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-data</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+    </dependencies>
     
 </project>
