--- a/iceberg/iceberg-sdk/pom.xml
+++ b/iceberg/iceberg-sdk/pom.xml
@@ -52,6 +52,12 @@
             <version>1.12.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-core</artifactId>
+            <version>3.3.4</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
